[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "synbio-rl"
version = "1.0.0"
description = "Synthetic Biology RL Environment — Meta OpenEnv Hackathon 2026"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "bhavyab212"}
]
keywords = ["openenv", "reinforcement-learning", "synthetic-biology", "llm-agent"]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "openai>=2.7.2",
    "python-multipart==0.0.9",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/Bhavyab2/SynBio-RL"
Repository = "https://github.com/bhavyab212/biocircuit_env-RL"

[tool.setuptools.packages.find]
where = ["."]
